# TaylorSeer

./: .gitignore  README.md  TaylorSeer-DiT.md  TaylorSeer-FLUX.md  TaylorSeer-FramePack.md  TaylorSeer-HiDream.md  TaylorSeer-HunyuanVideo.md  TaylorSeer-Wan2.1.md
TaylorSeer-DiT/: environment.yml  models.py  sample.py  sample_ddp.py
TaylorSeer-DiT/cache_functions/: attention.py  cache_cutfresh.py  cache_init.py  cal_type.py  force_scheduler.py  fresh_ratio_scheduler.py  global_force_fresh.py  score_evaluate.py  scores.py
TaylorSeer-DiT/diffusion/: gaussian_diffusion.py
TaylorSeer-DiT/taylor_utils/: __init__.py
TaylorSeer-FLUX/: demo_gr.py  demo_st.py  demo_st_fill.py
TaylorSeer-FLUX-Kontext/src/: cli_control.py  geneval_flux.py  sample.py
TaylorSeer-FLUX/src/: sample.py
TaylorSeer-FLUX/src/flux/: cli.py  (+6 more)
TaylorSeer-FramePack/: TaylorSeer-FramePack.md
TaylorSeer-FramePack/TaylorSeer-FramePack/: config.py  demo_gradio.py
TaylorSeer-HiDream/: README.md  gradio_demo.py  inference.py  requirements.txt  sampling.py
TaylorSeer-HiDream-I1-nf4/: LICENSE  README.md  pyproject.toml  requirements.txt
TaylorSeer-HiDream-I1-nf4/hdi1/: __main__.py  nf4.py  web.py
TaylorSeer-HiDream-I1-nf4/hdi1/models/cache_functions/: cache_init.py
TaylorSeer-HiDream-I1-nf4/hdi1/models/transformers/: transformer_hidream_image.py
TaylorSeer-HunyuanVideo/: README.md  README_zh.md  env.sh  inference.sh  sample_video.py  sample_video_vbench.py  step.txt
TaylorSeer-HunyuanVideo/assets/: PenguinVideoBenchmark.csv  WECHAT.md
TaylorSeer-Wan2.1/: sample.py  taylorseer_generate.py
(+72 files in other folders)
